feat: base markup and styles

--- a/src/index.html
+++ b/src/index.html
@@ -5,20 +5,38 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Songbird</title>
+  <title>cssBayan</title>
 </head>
 
 <body>
   <div class="content-container">
-    <header class="header">
-      Header
-    </header>
-    <main class="main">
-      Main
-    </main>
-    <footer class="footer">
-      footer
-    </footer>
+    <h1 class="h1-title">CSS Bayan</h1>
+    <ul class="memes-list">
+      <li class="memes-list_item">
+        film meme
+        <img src="./assets/img/film.jpg" alt="film meme">
+      </li>
+      <li class="memes-list_item">
+        shop meme
+        <img src="./assets/img/shop.jpg" alt="shop meme">
+      </li>
+      <li class="memes-list_item">
+        loot meme
+        <img src="./assets/img/loot.jpg" alt="loot meme">
+      </li>
+      <li class="memes-list_item">
+        years meme
+        <img src="./assets/img/years.jpg" alt="years meme">
+      </li>
+      <li class="memes-list_item">
+        secrets meme
+        <img src="./assets/img/secrets.jpg" alt="secrets meme">
+      </li>
+      <li class="memes-list_item">
+        death meme
+        <img src="./assets/img/death.jpg" alt="death meme">
+      </li>
+    </ul>
   </div>
 </body>
 
