feat: test build

--- a/src/index.html
+++ b/src/index.html
@@ -13,28 +13,71 @@
     <h1 class="h1-title">CSS Bayan</h1>
     <ul class="memes-list">
       <li class="memes-list_item">
-        film meme
-        <img src="./assets/img/film.jpg" alt="film meme">
+        <input id="film-meme" name="film-meme" type="checkbox" checked />
+        <label class="memes-list_item_title" for="film-meme">
+          <p>film meme</p>
+          <img class="memes-list_item_close" src="./assets/img/icon_close.svg" alt="icon_close">
+          <div class="memes-content">
+            <p>Какой нибудь meme</p>
+            <img class="memes-list_item_hide" src="./assets/img/film.jpg" alt="film meme">
+          </div>
+        </label>
+
       </li>
       <li class="memes-list_item">
-        shop meme
-        <img src="./assets/img/shop.jpg" alt="shop meme">
+        <input id="death-meme" name="death-meme" type="checkbox" />
+        <label class="memes-list_item_title" for="death-meme">
+          <p>death meme</p>
+          <img class="memes-list_item_close" src="./assets/img/icon_close.svg" alt="icon_close">
+          <div class="memes-content">
+            <p>Какой нибудь meme</p>
+            <img class="memes-list_item_hide" src="./assets/img/death.jpg" alt="death meme">
+          </div>
+        </label>
       </li>
       <li class="memes-list_item">
-        loot meme
-        <img src="./assets/img/loot.jpg" alt="loot meme">
+        <input id="loot-meme" name="loot-meme" type="checkbox" />
+        <label class="memes-list_item_title" for="loot-meme">
+          <p>loot meme</p>
+          <img class="memes-list_item_close" src="./assets/img/icon_close.svg" alt="icon_close">
+          <div class="memes-content">
+            <p>Какой нибудь meme</p>
+            <img class="memes-list_item_hide" src="./assets/img/loot.jpg" alt="loot meme">
+          </div>
+        </label>
       </li>
       <li class="memes-list_item">
-        years meme
-        <img src="./assets/img/years.jpg" alt="years meme">
+        <input id="secrets-meme" name="secrets-meme" type="checkbox" />
+        <label class="memes-list_item_title" for="secrets-meme">
+          <p>secrets meme</p>
+          <img class="memes-list_item_close" src="./assets/img/icon_close.svg" alt="icon_close">
+          <div class="memes-content">
+            <p>Какой нибудь meme</p>
+            <img class="memes-list_item_hide" src="./assets/img/secrets.jpg" alt="secrets meme">
+          </div>
+        </label>
       </li>
       <li class="memes-list_item">
-        secrets meme
-        <img src="./assets/img/secrets.jpg" alt="secrets meme">
+        <input id="shop-meme" name="shop-meme" type="checkbox" />
+        <label class="memes-list_item_title" for="shop-meme">
+          <p>shop meme</p>
+          <img class="memes-list_item_close" src="./assets/img/icon_close.svg" alt="icon_close">
+          <div class="memes-content">
+            <p>Какой нибудь meme</p>
+            <img class="memes-list_item_hide" src="./assets/img/shop.jpg" alt="shop meme">
+          </div>
+        </label>
       </li>
       <li class="memes-list_item">
-        death meme
-        <img src="./assets/img/death.jpg" alt="death meme">
+        <input id="years-meme" name="years-meme" type="checkbox" />
+        <label class="memes-list_item_title" for="years-meme">
+          <p>years meme</p>
+          <img class="memes-list_item_close" src="./assets/img/icon_close.svg" alt="icon_close">
+          <div class="memes-content">
+            <p>Какой нибудь meme</p>
+            <img class="memes-list_item_hide" src="./assets/img/years.jpg" alt="years meme">
+          </div>
+        </label>
       </li>
     </ul>
   </div>
